--- a/.env
+++ b/.env
@@ -1,19 +1,14 @@
-# OpenAI
-OPENAI_API_KEY=your-openai-api-key
-AI_MODEL=openai
-EMBEDDING_MODEL=text-embedding-ada-002
-
-# Gemini (Google Generative Language API)
-GEMINI_API_KEY=your-gemini-api-key
-GEMINI_MODEL=gemini-pro
-
 # Azure OpenAI
 AZURE_OPENAI_API_KEY=your-azure-openai-api-key
 AZURE_OPENAI_ENDPOINT=https://your-resource-name.openai.azure.com
-AZURE_OPENAI_DEPLOYMENT=your-deployment-name
-AZURE_OPENAI_API_VERSION=2023-05-15
+AZURE_OPENAI_DEPLOYMENT=o4-mini
+AZURE_OPENAI_MODEL_NAME=o4-mini
+AZURE_OPENAI_API_VERSION=2024-12-01-preview
 
-# Embedding Model Provider (openai or huggingface)
-EMBEDDING_MODEL_PROVIDER=openai
-# For HuggingFace embedding (if EMBEDDING_MODEL_PROVIDER= huggingface)
-# EMBEDDING_MODEL=sentence-transformers/all-MiniLM-L6-v2
+# Azure OpenAI埋め込み
+AZURE_OPENAI_EMBED_API_KEY=your-azure-openai-embed-api-key
+AZURE_OPENAI_EMBED_ENDPOINT=https://your-resource-name.openai.azure.com
+AZURE_OPENAI_EMBED_DEPLOYMENT=text-embedding-3-small
+AZURE_OPENAI_EMBED_MODEL_NAME=text-embedding-3-small
+AZURE_OPENAI_EMBED_API_VERSION=2024-02-01
+
